# CustomersUI

./: README.md
client/: CMakeLists.txt
client/src/http_client/: main.cpp
client/src/http_client/GUI/Client_GUI/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ui_MainWindow.h
client/src/http_client/GUI/Client_GUI/Cart/: CartWindow.cpp  CartWindow.h  Form_cart.ui  ui_FormCart.h
client/src/http_client/GUI/Client_GUI/Orders/: Form_orders.ui
client/src/http_client/GUI/Client_GUI/Profile/: Change_info_form.ui  EditProfileWindow.cpp  EditProfileWindow.h  edit_profile_ui.h
client/src/http_client/GUI/Login_GUI/: LoginWindow.cpp  LoginWindow.h  Login_form.ui  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  UserSession.h  ui_Login_form.h  ui_RegisterDialog.h
client/src/http_client/http_requests/: Requests.cpp  Requests.h
server/http_server/: __main__.py  authorization.py  config.ini  crud.py  database.py  login_operations.py  models.py  routers.py  schemas.py
server/http_server/config/: config.ini  config_server.py
server/swagger_tests/: conftest.py  test_swagger.py
server/tests/: test_server.py
